# qubit-os

./: .gitignore  404.html  AGENTS.md  AGENTS.txt  ARCHITECTURE-REVIEW.md  AUDIT-v0.2.0.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.txt  Cargo.toml  LIMITS.md  QUALITY_GATES.md  QubitOS-Design-v0.4.1-Final.md  README.md  README.txt  ROADMAP.md  ROADMAP.txt  SECURITY.md  build.rs  coverage.json  index.html  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  docs.yaml  release.yaml
api/: index.html  index.txt  pulsegen.txt  validation.txt
api/calibrator/: index.html
api/cli/: index.html
concepts/: architecture.txt  glossary.txt
core/: CHANGELOG.txt  CONTRIBUTING.md  CONTRIBUTING.txt  README.md  README.txt  SECURITY.txt  mkdocs.yml  pyproject.toml
core/.github/workflows/: ci.yaml  release.yaml
core/docs/: ROADMAP.md  index.md  index.txt
core/docs/api/: calibrator.md  cli.txt  client.txt  grpc.txt  pulsegen.txt  rest.txt  validation.txt
core/docs/concepts/: architecture.txt  feedback.txt  glossary.md  glossary.txt
core/docs/guides/: installation.md  installation.txt  quickstart.md  troubleshooting.txt
core/docs/notebooks/: 01-quickstart.ipynb  03-custom-hamiltonians.ipynb
core/docs/specs/: ERROR-BUDGET-SPEC.txt  EXPERIMENT-PROVENANCE-SPEC.txt  HAMILTONIAN-FIRST-API-SPEC.md  HAMILTONIAN-FIRST-API-SPEC.txt  README.md  README.txt  SME-FEEDBACK-SPEC.md  SME-FEEDBACK-SPEC.txt  TIME-MODEL-SPEC.md
core/docs/tutorials/: custom-hamiltonians.txt  lyapunov-feedback.txt  pulse-generation.md  sme-trajectory.txt
core/docs_hooks/: txt_support.py
core/scripts/: bench_feedback_law.py
core/src/qubitos/: __init__.py
core/src/qubitos/calibrator/: __init__.py  benchmarking.py  drift.py  fitting.py  loader.py  runner.py
core/src/qubitos/cli/: main.py
core/src/qubitos/client/: __init__.py  hal.py  local.py
core/src/qubitos/error_budget/: __init__.py  analysis.py  render.py
core/src/qubitos/feedback/: __init__.py  analysis.py  controller.py  lyapunov.py  viz.py
core/src/qubitos/lindblad/: __init__.py
core/src/qubitos/proto/: __init__.py
core/src/qubitos/proto/quantum/backend/v1/: service_pb2.pyi
core/src/qubitos/proto/quantum/pulse/v1/: feedback_pb2.py  feedback_pb2.pyi  feedback_pb2_grpc.py  grape_pb2.py  grape_pb2.pyi  grape_pb2_grpc.py  hamiltonian_pb2.pyi  hamiltonian_pb2_grpc.py  pulse_pb2.py  sme_pb2.py  sme_pb2.pyi  sme_pb2_grpc.py  temporal_pb2.py
core/src/qubitos/provenance/: diff.py  nodes.py  store.py
core/src/qubitos/pulsegen/: __init__.py  grape.py  serialize.py  shapes.py
core/src/qubitos/sme/: __init__.py  ensemble.py  ensemble_batched.py  ensemble_gpu.py  integrator.py  measurement.py  trajectory.py
core/src/qubitos/temporal/: __init__.py  budget.py  constraints.py  sequence.py
core/src/qubitos/validation/: __init__.py  convergence.py  hellinger.py
core/tests/golden/: README.md  error_budget_golden.yaml  generate.py  generate_2q.py  grape_h_gate_seed42.json  grape_x_gate_seed42.json  qutip_h_gate_seed42.json  qutip_sim.py  test_2q_golden.py  test_error_budget_golden.py  test_golden.py  utils.py
core/tests/integration/: test_placeholder.py
core/tests/integration/feedback/: test_feedback_validation_suite.py
core/tests/integration/sme/: test_validation_suite.py
core/tests/unit/: test_active_calibration.py  test_cli.py  test_cliffords.py  test_compilation.py  test_error_budget.py  test_fingerprint.py  test_grape.py  test_hamiltonians.py  test_lindblad.py  test_memory_sparse.py  test_multiqubit.py  test_parametric_gates.py  test_provenance.py  test_runner.py  test_rust_grape_crossval.py  test_scheduler.py  test_shapes.py  test_target_unitary.py  test_temporal_integration.py  test_v020_completion.py  test_v030_completion.py  test_validation.py
core/tests/unit/feedback/: test_analysis.py  test_analysis_parallel.py  test_controller.py  test_lyapunov.py  test_rust_lyapunov_crossval.py  test_viz.py
core/tests/unit/sme/: test_batched_crossval.py  test_gpu_crossval.py  test_integrator.py  test_measurement.py  test_rust_sme_crossval.py  test_solver.py
docs/: DOCUMENTATION-PLAN.md  ROADMAP.md  STUDY-GUIDE.md  index.md
docs/api/: index.md
guides/: quickstart.txt  sme-solver.txt
hal/: CHANGELOG.txt  Cargo.toml  README.md  README.txt  REFACTOR_QUTIP_BACKEND.md  build.rs  pyproject.toml
hal/.cargo/: config.toml
hal/python/qubit_os_hardware/: __init__.py
hal/src/: config.rs  lib.rs  main.rs
hal/src/backend/: compiler.rs  trait.rs
hal/src/backend/braket/: mod.rs
hal/src/backend/ibm/: mod.rs
hal/src/feedback/: lyapunov.rs  mod.rs  pyo3_bindings.rs
hal/src/grape/: mod.rs
hal/src/lindblad/: ffi.rs  mod.rs
hal/src/server/: grpc.rs  mod.rs  temporal.rs
hal/src/sme/: integrate.rs  measurement.rs  mod.rs  pyo3_bindings.rs  trajectory.rs
hal/src/temporal/: mod.rs
hal/tests/: bench_feedback_law.rs  golden_lindblad.rs  golden_lindblad_analytical.json  validate_c_solver.rs
proto/: CHANGELOG.txt  Cargo.toml  README.md  README.txt  build.rs  pyproject.toml
scripts/: ci-check.sh
search/: search_index.json
specs/: HAMILTONIAN-FIRST-API-SPEC.txt  MULTI-QUBIT-SPEC.txt  RUST-NATIVE-SOLVER-SPEC.txt  SME-FEEDBACK-SPEC.txt  TIME-MODEL-SPEC.txt  index.html
src/: lib.rs
tutorials/: grape-optimizer.txt  pulse-generation.txt
(+147 files in other folders)
